fixed horizontal scroll bar for phone media query

--- a/css/index.css
+++ b/css/index.css
@@ -188,12 +188,18 @@ li {
 }
 #farm-animals {
   width: 300px;
+  height: 300px;
 }
 .home {
   background-color: #f2f4d1;
   width: 100%;
   max-width: 1000px;
   margin: auto;
+}
+@media (max-width: 500px) {
+  .home {
+    width: 90%;
+  }
 }
 h1 {
   text-align: center;
@@ -217,13 +223,13 @@ h1 {
 }
 .slogan {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   align-content: center;
   color: #7F3FBF;
   width: 100%;
-  margin: 25px 0;
+  margin: 35px 0;
 }
 @media (max-width: 800px) {
   .slogan {
@@ -235,12 +241,18 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding: 50px;
+  padding: 50px 0 50px 50px;
   width: 300px;
+}
+@media (max-width: 800px) {
+  .slogan div {
+    padding: 50px;
+  }
 }
 .features {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   font-family: 'Montserrat', sans-serif;
   color: #04D924;
   margin: 25px 0;
@@ -255,7 +267,12 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 300px;
-  padding: 50px;
+  padding: 50px 50px 50px 0;
+}
+@media (max-width: 800px) {
+  .features div {
+    padding: 50px;
+  }
 }
 .banner img {
   width: 90%;
