--- a/less/home.less
+++ b/less/home.less
@@ -5,6 +5,7 @@
 
 #farm-animals {
   width: 300px;
+  height: 300px;
 }
 
 .home {
@@ -12,6 +13,10 @@
   width: 100%;
   max-width: 1000px;
   margin: auto;
+
+  @media @phone {
+    width: 90%;
+  }
 }
 
 h1 {
@@ -36,13 +41,13 @@ h1 {
 
 .slogan {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   align-content: center;
   color: @Noise-Controller-2-hex;
   width: 100%;
-  margin: 25px 0;
+  margin: 35px 0;
 
   @media @tablet {
     flex-direction: column;
@@ -53,14 +58,19 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 50%;
-    padding: 50px;
+    padding: 50px 0 50px 50px;
     width: 300px;
+
+    @media @tablet {
+      padding: 50px;
+    }
   }
 }
 
 .features {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   font-family: 'Montserrat', sans-serif;
   color: @Noise-Controller-3-hex;
   margin: 25px 0;
@@ -74,7 +84,11 @@ h1 {
     display: flex;
     flex-direction: column;
     width: 300px;
-    padding: 50px;
+    padding: 50px 50px 50px 0;
+
+    @media @tablet {
+      padding: 50px;
+    }
   }
 }
 
